--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -1,3 +1,20 @@
+:global {
+  .ReactModalPortal > div {
+    opacity: 0;
+  }
+
+  .ReactModalPortal .ReactModal__Overlay {
+    transition: opacity 300ms ease-in-out;
+    background: rgba(0, 0, 0, 0.15);
+    &--after-open {
+      opacity: 1;
+    }
+    &--before-close {
+      opacity: 0;
+    }
+  }
+}
+
 :local {
   $black: #000;
   $white: #fff;
@@ -74,7 +91,6 @@
         cursor: pointer;
       }
     }
-
 
     .health-professionals {
       background-color: $people-background-color;
