--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -20,6 +20,8 @@
 }
 
 :local {
+
+  // colours
   $black: #000;
   $white: #fff;
   $blue-text: #2A95BF;
@@ -28,12 +30,20 @@
   $panel-background-color: #F7F7F7;
   $people-background-color: #F5F5F5;
   $person-profile-name: #6C6C6C;
-  $person-profile-title: #AFAFAF;
+  $person-profile-text: #AFAFAF;
   $button-colour: #2FACC7;
   $button-border: #30AEC7;
+  $horizontal-line: #D8D8D8;
+  $profile-heading: #585656;
 
   .center {
     text-align: center;
+  }
+
+  hr {
+    border-top: 0.5px solid $horizontal-line;
+    border-bottom: none;
+    margin: 0;
   }
 
   /* profile for the modal */
@@ -54,24 +64,54 @@
       font-size: 21px;
       line-height: 24px;
       font-weight: 500;
+      margin-bottom: 11px;
     }
 
     .title {
       font-size: 17px;
       line-height: 24px;
-      color: $person-profile-title;
+      color: $person-profile-text;
     }
 
     button {
       color: $button-colour;
       font-size: 17px;
-      font-weight: 300;
+      font-weight: 500;
       line-height: 20px;
       padding: 22px 60px;
       border-radius: 4px;
       border: 1px solid $button-border;
       background-color: $white;
-      margin-top: 30px;
+      margin: 30px 0;
+    }
+
+    .about {
+      color: $person-profile-text;
+      font-size: 17px;
+      line-height: 23px;
+      margin-top: 0;
+    }
+
+    .heading {
+      margin: 30px 0;
+      font-size: 17px;
+      line-height: 20px;
+      color: $profile-heading;
+      font-weight: 500;
+    }
+
+    .languages {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+
+      li {
+        display: inline-block;
+        padding: 0 15px;
+        color: $person-profile-text;
+        font-size: 17px;
+        line-height: 30px;
+      }
     }
   }
 
