--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -98,7 +98,7 @@
     }
 
     .heading, .heading2 {
-      margin: 30px 0;
+      margin: 20px 0;
       font-size: 17px;
       line-height: 20px;
       font-weight: 500;
@@ -130,6 +130,7 @@
     .map {
       border: none;
       height: 288px;
+      width: 100%;
     }
   }
 
@@ -195,11 +196,12 @@
           }
 
         }
-
+        
         .name {
           font-size: 22px;
           line-height: 25px;
           color: $blue-text;
+          margin-bottom: 10px;
         }
 
         .title {
