--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -183,6 +183,17 @@
         display: flex;
       }
 
+      .times{
+        overflow-y: hidden;
+        display: inline-flex;
+
+        .panel {
+          margin-right: 10px;
+          padding: 10px 18px;
+          cursor: pointer;
+        }
+      }
+
       .person {
         background-color: $white;
         margin-bottom: 10px;
@@ -196,7 +207,7 @@
           }
 
         }
-        
+
         .name {
           font-size: 22px;
           line-height: 25px;
