added margin so we can see the box shadow under the header

--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -159,6 +159,7 @@
     .header {
       background: linear-gradient(to top right, #3CB9C0, #2CAACA);
       box-shadow: 0 3px 6px rgba(0,0,0,0.16);
+      margin-bottom: 8px;
 
       .topbar {
         padding: 15px;
