--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -155,6 +155,19 @@
       right: 0;
       margin: 0 auto;
     }
+
+    .footer {
+      margin: 0 -20px -5px;
+    }
+  }
+
+  .footer {
+    color: $person-profile-text;
+    text-align: center;
+    font-size: 15px;
+    line-height: 21px;
+    background-color: $panel-background-color;
+    padding: 45px 0;
   }
 
   .booking-app {
